# Django-Charm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
core/core/: settings.py
core/home/: views.py
corre2/: manage.py
corre2/corre2/: asgi.py  settings.py  urls.py  wsgi.py
corre2/home/templates/home/: index.html
src/django_charm/: cli.py
src/djangocharm/: cli.py
