[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "djangocharm"
version = "0.1.5"
description = "A simple test package"
readme = ""
requires-python = ">=3.7"
dependencies = [
  "django>=4.2",
  "requests>=2.31"
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
djangocharm = "djangocharm.cli:main"



